--- a/src/config.php.sample
+++ b/src/config.php.sample
@@ -6,6 +6,7 @@
 //以下定义PHP内部调用时的引用路径
 define('BBS_ROOT',dirname(__FILE__));
 define('BBS_TEMPLATE', BBS_ROOT.'/include/template');
+define("BBS_USERFILE","./userfile/");
 
 //以下定义前端网页的引用路径，调试时请修改为本地服务器URL
 //define('BBS_WEB_ROOT','http://127.0.0.1/Portal-BBS/src');
@@ -16,5 +17,7 @@ define('SQL_HOST','127.0.0.1');
 define('SQL_ACCOUNT','root');
 define('SQL_PASSWORD','');
 define('SQL_DB','UsersOfOPENBBS');
+
+define('BBS_SECTION_NUMBER',6);	//版块数
 
 ?>
