--- a/src/config.php.sample
+++ b/src/config.php.sample
@@ -6,11 +6,12 @@
 //以下定义PHP内部调用时的引用路径
 define('BBS_ROOT',dirname(__FILE__));
 define('BBS_TEMPLATE', BBS_ROOT.'/include/template');
-define("BBS_USERFILE","./userfile/");
+define("BBS_USERFILE", BBS_ROOT.'/userfile/');
 
 //以下定义前端网页的引用路径，调试时请修改为本地服务器URL
 //define('BBS_WEB_ROOT','http://127.0.0.1/Portal-BBS/src');
 define('BBS_WEB_ROOT','http://localhost/Portal-BBS/src');
+define('BBS_WEB_USERFILE', BBS_WEB_ROOT.'/userfile/');
 define('BBS_WEB_TEMPLATE',BBS_WEB_ROOT.'/include/template');
 
 define('SQL_HOST','127.0.0.1');
